--- a/html/snake.html
+++ b/html/snake.html
@@ -9,6 +9,8 @@
     <script src="../js/snake.js"></script>
     <script src="../js/config.js"></script>
     <script src="../js/keymaster.js"></script>
+
+    <link rel="stylesheet" href="../css/snake.css">
   </head>
   <body>
 
