After losing, restart new game

--- a/html/snake.html
+++ b/html/snake.html
@@ -21,7 +21,7 @@
     <script>
       $(function() {
         $el = $(".snake")
-        new window.Game($el);
+        new window.Game.Play($el);
       })
     </script>
 
