--- a/html/snake.html
+++ b/html/snake.html
@@ -10,9 +10,21 @@
     <script src="../js/config.js"></script>
     <script src="../js/keymaster.js"></script>
 
+    <link href='http://fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="../css/snake.css">
   </head>
   <body>
+
+    <div class="info">
+      <ul>
+        <li>w-a-s-d: move</li>
+        <li>p: toggle pause</li>
+      </ul>
+
+      <div class="counter">
+      </div>
+    </div>
+
 
     <div class="snake">
 
