--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <script src="../js/jquery-2.1.1.js"></script>
-    <script src="../js/game.js"></script>
-    <script src="../js/board.js"></script>
-    <script src="../js/snake.js"></script>
-    <script src="../js/config.js"></script>
-    <script src="../js/keymaster.js"></script>
+    <script src="./js/jquery-2.1.1.js"></script>
+    <script src="./js/game.js"></script>
+    <script src="./js/board.js"></script>
+    <script src="./js/snake.js"></script>
+    <script src="./js/config.js"></script>
+    <script src="./js/keymaster.js"></script>
 
     <link href='http://fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="../css/snake.css">
+    <link rel="stylesheet" href="./css/snake.css">
   </head>
   <body>
 
