--- a/index.html
+++ b/index.html
@@ -1,41 +1,44 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <script src="./js/jquery-2.1.1.js"></script>
-    <script src="./js/game.js"></script>
-    <script src="./js/board.js"></script>
-    <script src="./js/snake.js"></script>
-    <script src="./js/config.js"></script>
-    <script src="./js/keymaster.js"></script>
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <script src="./js/jquery-2.1.1.js"></script>
+  <script src="./js/game.js"></script>
+  <script src="./js/board.js"></script>
+  <script src="./js/snake.js"></script>
+  <script src="./js/config.js"></script>
+  <script src="./js/keymaster.js"></script>
 
-    <link href='http://fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="./css/snake.css">
-  </head>
-  <body>
+  <link href='http://fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="./css/snake.css">
+</head>
+<body>
 
-    <div class="info">
-      <ul>
-        <li>w-a-s-d: move</li>
-        <li>p: toggle pause</li>
-      </ul>
 
-      <div class="counter">
-      </div>
+
+<div class="snake">
+  <div class="info">
+    <ul>
+      <li>w-a-s-d: move</li>
+      <li>p: toggle pause</li>
+    </ul>
+
+    <div class="current-score">
     </div>
 
-
-    <div class="snake">
+    <div class="high-score">
 
     </div>
+  </div>
+</div>
 
-    <script>
-      $(function() {
-        $el = $(".snake")
-        new window.Game.Play($el);
-      })
-    </script>
+<script>
+  $(function() {
+    $el = $(".snake")
+    new window.Game.Play($el);
+  })
+</script>
 
-  </body>
+</body>
 </html>
