Can pause on new games

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <script>
   $(function() {
     $el = $(".snake")
-    new window.Game.Play($el);
+    new window.Game.Play($el, true);
   })
 </script>
 
