--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
 </head>
 <body>
 
-
-
 <div class="snake">
   <div class="info">
     <ul>
@@ -31,6 +29,14 @@
 
     </div>
   </div>
+</div>
+
+<div class="game-over">GAME OVER</div>
+
+<div class="countdown-blocks">
+  <div class="countdown-block block-1"></div>
+  <div class="countdown-block block-2"></div>
+  <div class="countdown-block block-3"></div>
 </div>
 
 <script>
