Info about me on pause

--- a/index.html
+++ b/index.html
@@ -39,6 +39,21 @@
   <div class="countdown-block block-3"></div>
 </div>
 
+<div class="me-info">
+  <img src="http://s3-us-west-2.amazonaws.com/aa-progress-tracker/students/avatars/000/000/758/medium/Robert_Jayaman.jpg?1435190827"/>
+
+  <h2>SNAKE</h2>
+  <p>
+    by Robert Yaman
+  </p>
+
+  <ul>
+    <li><span class="bullet-block"></span><a href="#">GitHub</a></li>
+    <li><span class="bullet-block"></span><a href="#">LinkedIn</a></li>
+    <li><span class="bullet-block"></span>robert.e.yaman@gmail.com</li>
+  </ul>
+</div>
+
 <script>
   $(function() {
     $el = $(".snake")
