Add start button

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
   </div>
 </div>
 
+<button id="start-button">PLAY SNAKE</button>
+
 <div class="game-over">GAME OVER</div>
 
 <div class="countdown-blocks">
@@ -44,7 +46,7 @@
 
   <h2>SNAKE</h2>
   <p>
-    by Robert Yaman
+    Robert Yaman
   </p>
 
   <ul>
