change linkedin link and add hover to start button

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <ul>
     <li><span class="bullet-block"></span><a href="https://github.com/robert-yaman">GitHub</a></li>
-    <li><span class="bullet-block"></span><a href="https://www.linkedin.com/profile/view?id=AAIAABbUsXIBBR3FCiPB0GRaLOBZZCVP1ycGHg4&trk=nav_responsive_tab_profile_pic">LinkedIn</a></li>
+    <li><span class="bullet-block"></span><a href="https://www.linkedin.com/pub/robert-yaman/a8/341/496">LinkedIn</a></li>
     <li><span class="bullet-block"></span>robert.e.yaman@gmail.com</li>
   </ul>
 </div>
